<resources>
    <string name="app_name_creaditing">Icredit</string>
    <string name="app_name_creaditing_debug">Icredit测试版</string>
    <string name="request_permission_title">Welcome to Icredit !</string>
    <string name="request_permission_desc">To assess your profile and create tailored loan products, we need to get your permissions for accessing information on your SMS, Contacts. Your data is well protected and used for assessment only. Without your consent, we will not share your personal information  and data with any third party. The platform will ensure 100% security of your information. All the information will be uploaded to our server (url https://srv.crediting.com/ ) as the input of our crediting model.</string>
    <string name="request_permission_phone_title">Mobile phone status</string>
    <string name="request_permission_phone_desc">We use applist data to distinguish fraudulent customers. Your information will be stored encrypted crediting.com. Your data will be uploaded to our server (https://srv.crediting.com/).</string>
    <string name="request_permission_camera_title">Camera</string>
    <string name="request_permission_camera_desc">It is used to identify the user identity, prevent malicious programs and safe operation.</string>
    <string name="request_permission_sdcard_title">SD card</string>
    <string name="request_permission_sdcard_desc">It is used to identify the user identity, prevent malicious programs and safe operation.  We will obtain your storage permission to ensure the normal operation of the program.</string>
    <string name="request_permission_location_title">Position</string>
    <string name="request_permission_location_desc">We use your location, device and usage data for anti-fraud and credit modeling purpose. </string>
    <string name="request_permission_contacts_title">Contact list</string>
    <string name="request_permission_contacts_desc">We use aspects of your phonebook and contact data to help us prevent fraud and determine your eligibility for credit. Your data will be uploaded to our server (https://srv.crediting.com/).  Icredit will never use contact or phonebook data to contact your friends or family. </string>
    <string name="request_permission_call_record_title">Recording function</string>
    <string name="request_permission_call_record_desc"></string>
    <string name="request_permission_sms_title">SMS</string>
    <string name="request_permission_sms_desc">We use SMS data to retrieve financial and transactional data to understand your financial history and help us determine your eligibility for credit. Your information will be stored encrypted crediting.com. Your data will be uploaded to our server (https://srv.crediting.com/).</string>
    <string name="request_permission_desc2">Please read the authorization carefully before using  Icredit</string>
    <string name="request_permission_cancel">disagree</string>
    <string name="request_permission_agree">Allow</string>
    <string name="splash_title"> Make your finance peace in mind</string>
    <string name="loan_person_profile_gender">Gender </string>
    <string name="Resent_now">Resend now</string>
    <string name="Resent_after">Resend After</string>
    <string name="signup_set_pwd_1">Creat a 4-digit password</string>
    <string name="signup_set_pwd_2">Confirm Password</string>
    <string name="signin_pwd_title">Your 4-digit password</string>
    <string name="setting_my_loan">My loan</string>
    <string name="setting_my_profile">My Profile</string>
    <string name="setting_card">Card</string>
    <string name="setting_bank_account">Bank Account</string>
    <string name="setting_message">Message</string>
    <string name="setting_help">Help</string>
    <string name="setting_about">About</string>
    <string name="setting_contact_us">Contact us</string>
    <string name="setting_feed_back">Feedback</string>
    <string name="setting_logout">Logout</string>
    <string name="setting_rate_us">RateUs</string>
    <string name="setting_test1">New App upload test </string>
    <string name="setting_test2">Old App upload test</string>
    <string name="setting_test3">SwitchHost</string>
    <string name="add_profile_title_1">Basic information about you</string>
    <string name="add_profile_title_1_2"> Tell us something more about you</string>
    <string name="add_profile_title_2">Tell us about you referee</string>
    <string name="add_profile_title_3">Tell us about you details information</string>
    <string name="profile3_item1">have Spouses?</string>
    <string name="profile3_item2">Is there any foreign debt?</string>
    <string name="profile3_item3">Gross Salary(monthly)</string>
    <string name="profile3_item4">Employer Name</string>
    <string name="profile3_item5">Employer Address</string>
    <string name="profile3_item6">Working Status</string>
    <string name="profile3_item_desc">Choose from list</string>
    <string name="profile1_submit">submit</string>
    <string name="profile1_item1">First Name</string>
    <string name="profile1_item2">Other/middle Name (optional)</string>
    <string name="profile1_item3">Last Name</string>
    <string name="profile1_checkbox_male">Male</string>
    <string name="profile1_checkbox_female">Female</string>
    <string name="profile1_item4">Date of Birth</string>
    <string name="profile1_item5">BVN</string>
    <string name="profile1_item6">Personal Email</string>
    <string name="profile1_item7">Residential address</string>
    <string name="profile1_item8">Street name</string>
    <string name="profile1_item9">Street number</string>
    <string name="add_profile_title_2_2">First Referee\' s</string>
    <string name="profile2_item1">Referee\' full leagal name</string>
    <string name="profile2_item2">Referee\' mobile number</string>
    <string name="profile2_item3">Ralationship</string>
    <string name="add_profile_title_2_3">Second Referee\' s</string>
    <string name="profile2_item4">Referee\' full leagal name</string>
    <string name="profile2_item5">Referee\' mobile number</string>
    <string name="profile2_item6">Ralationship</string>
    <string name="add_profile_title_2_4">Third Referee\' s</string>
    <string name="add_profile_title_2_5">Fourth Referee\' s</string>
    <string name="loan_apply_title">Please do not transfer money to any stranger. Be careful not to be cheated.</string>
    <string name="bank_list">Bank List</string>
    <string name="bank_account_1">Bank Name</string>
    <string name="bind_new_card_desc1">Bank Name</string>
    <string name="bind_new_card_desc2">Bank Account Number</string>
    <string name="add_bank_num_desc1">Card number</string>
    <string name="bind_new_card_title1">Bank Account</string>
    <string name="bind_new_card_title2">Bank Card</string>
    <string name="bind_new_card_title3">Verification</string>
    <string name="bind_new_card2_expitydate">Expiry date</string>
    <string name="bind_new_card2_cvv">CVV</string>
    <string name="bind_new_card2_choose_date">Expiry date</string>
    <string name="loan_declined_1"> 1.For various reasons, there may be overdue behaviors on multiple platforms</string>
    <string name="loan_declined_2"> 1.For various reasons, there may be overdue behaviors on multiple platforms</string>
    <string name="loan_declined_3"> 1.For various reasons, there may be overdue behaviors on multiple platforms</string>
    <string name="loan_declined_4"> 1.For various reasons, there may be overdue behaviors on multiple platforms</string>
    <string name="loan_declined_5"> 1.For various reasons, there may be overdue behaviors on multiple platforms</string>
    <string name="load_apply_apply_now">apply now</string>
    <string name="loan_declined_apply_again">apply again</string>
    <string name="loan_active_make_repaymemt">make a repayment</string>
    <string name="loan_active_apply_now">apply now</string>
    <string name="my_loan_title_processing">Processing</string>
    <string name="my_loan_title_active">Repayment</string>
    <string name="my_loan_title_paid">Paid</string>
    <string name="my_loan_title_overdue">Overdue</string>
    <string name="my_loan_title_declined">Application Result</string>
    <string name="my_loan_title_repaying">Repaying</string>
    <string name="term_1">I agree to the</string>
    <string name="term_2">terms </string>
    <string name="term_and">&amp;</string>
    <string name="privacy_2">privacy</string>
    <string name="bank_account_bank_name">Bank Name</string>
    <string name="bank_account_bank_account_num">Bank Account Number</string>
    <string name="bank_account_phone_num">Phone Number</string>
    <string name="bank_account_bank_name_desc">Please input bank name.</string>
    <string name="bank_account_bank_account_num_desc">Please input bank account number.</string>
    <string name="bank_account_phone_num_desc">Please input phone number.</string>
    <string name="update_content">After update faster approve and more amount. \n \n For better user experience update app as soon as possible.</string>
    <string name="about_terms">Terms of Service</string>
    <string name="about_privacy">Privacy Policy</string>
    <string name="rate_us_desc">If you like our application, please take your valuable time to make a satisfactory evaluation for our application. Thank you.</string>
    <string name="rate_us">rate</string>
    <string name="signin_captcha">Enter the captcha</string>
    <string name="declined_desc">Dear Customer , sorry to inform you that your application was declined. Please keep better records and apply later. The reason why your application is unsuccessful is because your credit score did not reach our minimum requirement. We got your credit score from an independent credit agency and you can improve it by having a healthy spending habit and building good credit history.</string>
    <string name="facebook_app_id">190342719637645</string>
    <string name="fb_login_protocol_scheme">fb190342719637645</string>
    <string name="server_is_not_alive">server is not alive .</string>
    <string name="device_check_failure">device check failure.</string>
    <string name="send_sms_error">send sms error.</string>
    <string name="please_send_msg_later">please send message later</string>
    <string name="must_agree_term">Please read and agree the Terms &amp; Privacy.</string>
    <string name="enter_correct_phone_num">Please enter your correct phone number</string>
    <string name="ussd_login_failure">ussd login failure</string>
    <string name="ussd_login_error">ussd login error</string>
    <string name="check_sms_code_verify_failure">check sms code verify failure.</string>
    <string name="please_enter_your_phone_number">Please enter your phone number to continue</string>
    <string name="use_the_phone_number_linked">Use the phone number linked to your BVN can enjoy best service.</string>
    <string name="enter_you_phone_number">Enter your phone number</string>
    <string name="please_read_the_terms_1">Please read the </string>
    <string name="please_read_the_terms_2">Terms</string>
    <string name="please_read_the_terms_3">&amp;</string>
    <string name="please_read_the_terms_4">Privacy.</string>
    <string name="please_read_the_terms_5">By continuing, you agree to the terms and privacy.</string>
    <string name="register_login">Register/Login</string>
    <string name="login_otp">Please enter the OTP we sent to +%s via sms</string>
    <string name="loan_declined_desc1">Sorry!!! \nWe could not approve your loan at the moment because of certain reasons. Please keep better records and apply later.</string>
    <string name="loan_declined_desc2_1">Possible Reason ：\n• Low credit Score\n• We got your credit score from an \n independent credit agency and you can improve it by building good credit history</string>
    <string name="the_otp_is_4_digit">The OTP is 6 digit</string>
</resources>