<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <com.loan.icreditapp.ui.profile.widget.SelectContainer
            android:id="@+id/select_container_bank_name"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="10dp"
            app:select_view_desc="@string/bank_account_bank_name_desc"
            app:select_view_hint="@string/bank_account_bank_name" />

        <View style="@style/view_divide" />

        <com.loan.icreditapp.ui.profile.widget.SelectContainer
            android:id="@+id/select_container_bank_account_number"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="10dp"
            app:select_view_desc="@string/bank_account_bank_account_num_desc"
            app:select_view_hint="@string/bank_account_bank_account_num" />

        <View style="@style/view_divide" />

        <com.loan.icreditapp.ui.profile.widget.SelectContainer
            android:id="@+id/select_container_phone_number"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="10dp"
            app:select_view_desc="@string/bank_account_phone_num_desc"
            app:select_view_hint="@string/bank_account_phone_num" />

        <View style="@style/view_divide" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_myloan_loading"
        android:layout_width="match_parent"
        android:clickable="true"
        android:visibility="gone"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/theme_color"
            android:layout_height="wrap_content"/>

    </FrameLayout>
</FrameLayout>