<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/add_profile_title_1"
                android:textColor="#333333"
                android:textSize="20sp" />

            <com.loan.icreditapp.ui.profile.widget.EditTextContainer
                android:id="@+id/select_container_profile_first_name"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp"
                app:select_view_hint="@string/profile1_item1" />

            <View style="@style/view_divide" />

            <com.loan.icreditapp.ui.profile.widget.EditTextContainer
                android:id="@+id/select_container_profile_middle_name"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp"
                app:select_view_hint="@string/profile1_item2" />

            <View style="@style/view_divide" />

            <com.loan.icreditapp.ui.profile.widget.EditTextContainer
                android:id="@+id/select_container_profile_last_name"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp"
                app:select_view_hint="@string/profile1_item3" />

            <View style="@style/view_divide" />

            <include
                android:id="@+id/gender_container_profile3_gender"
                layout="@layout/gender_checkbox"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp" />

            <View style="@style/view_divide" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/add_profile_title_1_2"
                android:textColor="#333333"
                android:textSize="20sp" />

            <com.loan.icreditapp.ui.profile.widget.SelectContainer
                android:id="@+id/select_container_profile_calendar"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="15dp"
                app:select_view_desc="@string/profile3_item_desc"
                app:select_view_hint="@string/profile1_item4"
                app:select_view_icon="@drawable/ic_calendar" />

            <View style="@style/view_divide" />

            <com.loan.icreditapp.ui.profile.widget.EditTextContainer
                android:id="@+id/select_container_profile_bvn"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp"
                app:select_view_hint="@string/profile1_item5" />

            <View style="@style/view_divide" />

            <com.loan.icreditapp.ui.profile.widget.EditTextContainer
                android:id="@+id/select_container_profile_email"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp"
                app:select_view_hint="@string/profile1_item6" />

            <View style="@style/view_divide" />

            <com.loan.icreditapp.ui.profile.widget.SelectContainer
                android:id="@+id/select_container_profile_address"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp"
                app:select_view_desc="@string/profile3_item_desc"
                app:select_view_hint="@string/profile1_item7" />

            <View style="@style/view_divide" />

            <com.loan.icreditapp.ui.profile.widget.EditTextContainer
                android:id="@+id/select_container_profile_street"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp"
                app:select_view_hint="@string/profile1_item8" />

            <View style="@style/view_divide" />

            <com.loan.icreditapp.ui.profile.widget.EditTextContainer
                android:id="@+id/select_container_profile_street_num"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                app:select_view_hint="@string/profile1_item9" />

            <View style="@style/view_divide" />

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--        <LinearLayout-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:layout_marginTop="15dp"-->
        <!--            android:orientation="horizontal">-->

        <!--            <ImageView-->
        <!--                android:id="@+id/iv_person_profile_agree"-->
        <!--                android:layout_width="20dp"-->
        <!--                android:layout_height="20dp"-->
        <!--                android:src="@drawable/ic_unselected" />-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginStart="8dp"-->
        <!--                android:text="@string/load_confirmation_term_1"-->
        <!--                android:textSize="14sp" />-->

        <!--            <TextView-->
        <!--                android:id="@+id/tv_person_profile_term"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginStart="2dp"-->
        <!--                android:text="@string/load_confirmation_term_2"-->
        <!--                android:textColor="@color/bg_color"-->
        <!--                android:textSize="14sp" />-->

        <!--        </LinearLayout>-->

        <FrameLayout
            android:id="@+id/fl_profile1_commit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/add_profile_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profile1_submit"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>